--- a/css/style.css
+++ b/css/style.css
@@ -22,11 +22,11 @@ html {
     align-items: center;
 }
 
-/* .hamburger-icon {
-    background-color: blue;
-    width: 20%;
-    height: 100%;
-} */
+.hamburger-icon {
+    fill:#70757a;
+    width:15%;
+    height:80%;
+}
 
 .nav {
     /* background-color: red; */
