Fixed layout and desktop css done

--- a/css/tablet.css
+++ b/css/tablet.css
@@ -1,7 +1,8 @@
+.hamburger-icon-container {
+    width: 8%;
+}
+
 .hamburger-icon {
-    fill:#70757a;
-    width:5%;
-    height:80%;
     margin-right: 10px;
 }
 
