--- a/css/style.css
+++ b/css/style.css
@@ -11,21 +11,37 @@ html {
 }
 
 
+.body {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    width: 100vw;
+}
+
 
 .header {
     display: flex;
     /* background-color: #000; */
-    width: 100vw;
-    max-width: 100%;
-    height: 5rem;
+    width: 100%;
+    /* height: 11%; */
+    /* height: 5rem; */
     padding: 1rem;
+    justify-content: center;
     align-items: center;
 }
 
+
+.hamburger-icon-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 15%;
+}
 .hamburger-icon {
     fill:#70757a;
-    width:15%;
-    height:80%;
+    width:2.5rem;
+    height:2.5rem;
 }
 
 .nav {
@@ -53,7 +69,6 @@ html {
     border-bottom: 2px solid #4285f4;
 }
 
-
 .options-logo-container {
     /* background-color: green; */
     width: 18%;
@@ -67,6 +82,9 @@ html {
 
 .profile-logo-container {
     /* background-color: rgb(0, 225, 255); */
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 16%;
     height: 100%;
     
@@ -84,7 +102,10 @@ html {
 
 
 .main {
-    height: 80vh;
+    height: 75%;
+    min-height: 30rem;
+    width: 100%;
+    /* height: 80vh; */
     padding: 6rem 1.5rem;
     display: flex;
     flex-direction: column;
@@ -121,6 +142,7 @@ html {
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
+    opacity: 0.6;
 
 }
 
@@ -142,6 +164,10 @@ html {
     background-size: contain;
 }
 
+.button {
+    display: none;
+}
+
 .offered {
     color: #3c4043;
     font-size: 1.3rem;
@@ -156,15 +182,19 @@ html {
 
 
 .footer {
+    height: 25%;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
 }
 
 .footer div {
     width: 100%;
-    height: 3.6rem;
+    /* height: 3.6rem; */
     background-color: #f2f2f2;
-    color: rgba(0,0,0,.6);
-    padding: 0.8rem;
+    color: #70757a;
+    padding: 0.8rem 1.4rem;
 }
 .footer div ul{
     height: 100%;
@@ -175,6 +205,7 @@ html {
 }
 .footer div ul li{
     display: inline;
+    margin: 0 1.3rem;
 }
 
 .footer div:nth-child(1) {
@@ -183,12 +214,10 @@ html {
 }
 
 .footer div:nth-child(2) {
+    display: flex;
+    align-items:center;
+    flex-direction: column;
     font-size: 1.31rem;
     width: 100%;
-    height: 4rem;
-}
-
-.footer div:nth-child(3) {
-    height: 4rem;
-    font-size: 1.31rem;
+    height: 8rem;
 }
